testdata/baselines/reference/submodule/conformance/jsdocTemplateTag3.errors.txt
a.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(7,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(8,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(9,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(10,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(11,13): error TS8010: Type annotations can only be used in TypeScript files.
a.js(14,29): error TS2339: Property 'a' does not exist on type 'U'.
a.js(14,35): error TS2339: Property 'b' does not exist on type 'U'.
a.js(21,3): error TS2741: Property 'b' is missing in type '{ a: number; }' but required in type '{ a: number; b: string; }'.
a.js(21,50): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(26,12): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (12 errors) ====
    /**
    ~~~
     * @template {{ a: number, b: string }} T,U A Comment
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @template {{ c: boolean }} V uh ... are comments even supported??
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @template W
    ~~~~~~~~~~~~~~
     * @template X That last one had no comment
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @param {T} t
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {U} u
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {V} v
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {W} w
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {X} x
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @return {W | X}
    ~~~~~~~~~~~~~~~~~~
                ~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function f(t, u, v, w, x) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
        if(t.a + t.b.length > u.a - u.b.length && v.c) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                ~
!!! error TS2339: Property 'a' does not exist on type 'U'.
                                      ~
!!! error TS2339: Property 'b' does not exist on type 'U'.
            return w;
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        return x;
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    f({ a: 12, b: 'hi', c: null }, undefined, { c: false, d: 12, b: undefined }, 101, 'nope');
    f({ a: 12  }, undefined, undefined, 101, 'nope');
      ~~~~~~~~~~
!!! error TS2741: Property 'b' is missing in type '{ a: number; }' but required in type '{ a: number; b: string; }'.
!!! related TS2728 a.js:2:28: 'b' is declared here.
                                                     
    
    
    /**
    ~~~
     * @template {NoLongerAllowed}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @template T preceding line's syntax is no longer allowed
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @param {T} x
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function g(x) { }
    ~~~~~~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    